# Changelog
## [0.5.2] - 2019-12-16
### Added
 - A number in the video now shows the current offset

### Changed
 - Improved video playback stability and accuracy
 - Changed button text from showing status "Unset" to showing action "Set"


## [0.5.2] - 2019-12-16
### Changed
 - Fixed a bug in the CSV-importer (now restarting stream after testing config)

## [0.5.1] - 2019-12-13
### Added
 - Updating progress bar when saving

### Changed
 - Fixed a bug where the archive would be closed preemptively
 - Cleaning up threads created by the relative slider
 - No longer duplicating when saving objects with identical names
 

## [0.5.0] - 2019-12-12
### Added
 - Saving page
 - Column plot
 - Scatter plot
 - Storing previous offset which can be loaded using a new button
 - Prompts to save when exiting from sync view with changed offset
 - Added templates for $filename and $fileext in parameter names

### Changed
 - Improved CSV file import when running from different culture
 - Fixed bug in sync view when selecting slave, removing it and then adding a point
 - Increased max window size to two hours
 - Minor fixes to video time handling


## [0.4.6] - 2019-11-26
### Changed
 - Handling freeing memory on data import


## [0.4.5] - 2019-11-26
### Added
 - Version number added to main page

### Changed
 - Improved CSV file format culture detection
 - Fixed reported video timestamp when not correctly detected
 - Fixed offset not always visible due to layout handlers


## [0.4.4] - 2019-11-22
### Added
 - Right clicking in datatrackline now seeks to beginning of that dataset

### Changed
 - Line does not continue to progress when at end of playback


## [0.4.3] - 2019-11-22
### Added
 - Support for reading files with string columns

### Changed
 - CSV importer writes strings to parquet tables


## [0.4.2] - 2019-11-22
### Added
 - Generic CSV importer

### Changed
 - Line for current time should now be at the same x-position even if axis values are hidden